...
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title for image" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YBz-e0-5BY">
                                <rect key="frame" x="10" y="270" width="300" height="35"/>
                                <constraints>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Take a Pic"/>
                                <connections>
                                    <action selector="takeAPic:" destination="PiS-z8-X6Z" eventType="touchUpInside" id="kAc-GZ-oZe"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Upload"/>
                                <connections>
                                    <action selector="uploadAction:" destination="PiS-z8-X6Z" eventType="touchUpInside" id="IXQ-mT-aQi"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Upload image" image="camera.fill" catalog="system" id="axy-yG-FvA"/>
                    <connections>
                        <outlet property="imgView" destination="9h4-HF-3Wb" id="Sl0-Mh-hec"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name: Qian" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIO-g2-pf9">
                                <rect key="frame" x="10" y="271.5" width="300" height="25"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="person.fill" catalog="system" id="S8d-WB-K1V"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5xw-hD-sP8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Home" image="house.fill" catalog="system" id="sdn-Gn-Kij"/>
                    <connections>
                        <outlet property="tblView" destination="RsK-KI-erF" id="6ku-fj-6f7"/>
...
